song duration more readable and compact. shrunk elems accordingly. fixed width.

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -60,7 +60,7 @@ ul {
     background: steelblue;
     padding: 20px;
 		list-style-type: none;
-		width: 500px;
+		width: 400px;
 		height: 250px;
 		overflow: scroll;
 		
@@ -69,6 +69,7 @@ ul {
 		    margin: 5px;
 				font-size: 14px;
 				color: navy;
+				overflow-x: hidden;
 		}
 }
 
@@ -122,14 +123,14 @@ input[type=text]:focus {
 }
 
 #chatLog {
-  display: inline-block;
-  width: 80%;
+	display: inline-block;
+  width: 884px;
   padding: 12px 20px;
   box-sizing: border-box;
   border: 1px solid #555;
   outline: none;
 	background: steelblue;
-	height: 100px;
+	height: 200px;
 	overflow: scroll;
 }
 
